Clean code improvements

--- a/nbproject/configs/MatroskaEditor_FR.properties
+++ b/nbproject/configs/MatroskaEditor_FR.properties
@@ -1,2 +1,2 @@
 $label=MatroskaEditor FR
-main.class=lan.vandiemens.media.editor.MatroskaEditor
+main.class=lan.vandiemens.media.matroska.editor.MatroskaEditor
