--- a/nbproject/configs/MatroskaEditor_ES.properties
+++ b/nbproject/configs/MatroskaEditor_ES.properties
@@ -1,2 +1,2 @@
 $label=MatroskaEditor ES
-main.class=lan.vandiemens.media.editor.MatroskaEditor
+main.class=lan.vandiemens.media.matroska.editor.MatroskaEditor
