--- a/nbproject/configs/MatroskaEditor_IT.properties
+++ b/nbproject/configs/MatroskaEditor_IT.properties
@@ -1,2 +1,2 @@
 $label=MatroskaEditor IT
-main.class=lan.vandiemens.media.editor.MatroskaEditor
+main.class=lan.vandiemens.media.matroska.editor.MatroskaEditor
